Fix scroll on iOS

--- a/css/default.css
+++ b/css/default.css
@@ -450,6 +450,11 @@ dl {
 }
 
 @media only screen and (max-width: 767px) and (orientation: portrait) {
+  .container {
+    /* Make the height of the container a bit smaller due to iOS toolbar size */
+    min-height: calc(100vh - 50px);
+  }
+
   #resume {
     width: 100%;
     padding: 0 0.5em;
